--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,18 @@
 version: '2'
 services:
   octoprint:
-    build: .
+    build: ./octoprint/
     image: octoprint/octoprint
     container_name: octoprint
     ports:
       - 5000:5000
-    # devices:
-    #  - /dev/ttyACM0:/dev/ttyACM0
+    devices:
+     - /dev/ttyUSB0:/dev/ttyUSB0
     volumes:
      - ./config:/home/octoprint/.octoprint
+  mjpg_streamer:
+    build: ./mjpg_streamer/
+    ports:
+    - 8081:8081
+    devices:
+    - /dev/video0:/dev/video0
